--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="wrapper">
     <header>
       <h1>RSVP</h1>
-      <p>A Family App</p>
+      <p>SHREYAS-SUPRITHA Wedding</p>
       <form id="registrar">
         <input type="text" name="name" placeholder="Invite Someone">
         <button type="submit" name="submit" value="submit">Submit</button>
